Fix spacing in experience section

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -86,10 +86,10 @@
   margin-left: 1rem;
 }
 
-/* .experience_position_box {
-  display: flex;
-  flex-direction: column;
-} */
+.experience_position_box {
+  margin-top: 1rem;
+
+}
 
 /* Mobile */
 @media (max-width: 700px) {
